<resources>
    <string name="app_name">Goat Registrator</string>

    <string name="text_farmer">Фермер</string>
    <string name="text_farm">Ферма</string>
    <string name="text_goat">Коза</string>
    <string name="text_add">Добави</string>
    <string name="text_cancel">Отмени</string>
    <string name="text_edit">Редактирай</string>
    <string name="text_search">Намери</string>
    <string name="text_read">Прочети</string>
    <string name="text_manually">Ръчно</string>
    <string name="text_pick_date">Избери дата</string>
    <string name="text_mother_of_the_goat">Майка на козата</string>
    <string name="text_father_of_the_goat">Баща на козата</string>
    <string name="text_continue">Продължи</string>
    <string name="text_delete">Изтрий</string>
    <string name="text_enter">Вход</string>
    <string name="text_settings">Настройки</string>
    <string name="text_user">Потребител</string>
    <string name="text_sing_out">Излез от системата</string>
    <string name="text_add_user">Добавяне на потребител</string>
    <string name="text_add_city_village">Добавяне на град/село</string>
    <string name="text_search_user">Търсене на потребител</string>
    <string name="text_search_goat">Търсене на коза</string>
    <string name="text_male">Мъжки</string>
    <string name="text_female">Женски</string>
    <string name="text_adult">Възрастен индивид</string>
    <string name="text_kid">Яре</string>
    <string name="text_city">Град</string>
    <string name="text_village">Село</string>
    <string name="text_search_company">Търсене на фирма</string>
    <string name="text_search_visit_protocol">Търсене на протокол за посещение</string>
    <string name="text_add_phone">Добави телефон</string>
    <string name="text_save">Запази</string>
    <string name="text_synchronize_cities">Синхронизирай градове</string>
    <string name="text_synchronize_breeds">Синхронизирай породи</string>
    <string name="text_synchronize_goat_statuses">Синхронизирай статуси на козите</string>
    <string name="text_synchronize_exterior_marks">Синхронизирай забележки и дефекти</string>
    <string name="text_synchronize_visit_activities">Синхронизирай дейности за протокол</string>
    <string name="text_last_sync_from_sc">Последна синхронизация от:\n%1$s</string>
    <string name="text_visit_protocol">Протоколи за посещение</string>
    <string name="text_add_visit_protocol">Добавяне на протокол за посещение</string>
    <string name="text_herd">Стадо</string>
    <string name="text_color">Цвят</string>
    <string name="text_notes">Бележки</string>
    <string name="text_birthplace">Местораждане</string>


    <string name="hint_user_name">Потребителско име</string>
    <string name="hint_user_password">Парола</string>
    <string name="hint_city_name">Име на град/село</string>
    <string name="hint_area_name">Област</string>
    <string name="hint_municipality_name">Община</string>
    <string name="hint_post_code">Пощенски код</string>
    <string name="hint_name">Име</string>
    <string name="hint_sur_name">Презиме</string>
    <string name="hint_family_name">Фамилия</string>
    <string name="hint_mark_id">Номер на марка</string>
    <string name="hint_vet_code">Ветеринарен номер</string>
    <string name="hint_vet_code_1">1-ви Ветеринарен номер</string>
    <string name="hint_vet_code_2">2-ри Ветеринарен номер</string>
    <string name="hint_vet_code_3">3-ти Ветеринарен номер</string>
    <string name="hint_breeding_code_1">1-ви Развъден номер</string>
    <string name="hint_breeding_code_2">2-ри Развъден номер</string>
    <string name="hint_breeding_code_3">3-ти Развъден номер</string>
    <string name="hint_herdbook_entry_number">Вх. Номер в родословната книга</string>
    <string name="hint_herdbook_volume">Раздел</string>
    <string name="hint_phone_number">Телефонен номер</string>
    <string name="hint_email">Имейл</string>
    <string name="hint_company_name">Име на фирма</string>
    <string name="hint_person_to_contact">Лице за контакт</string>
    <string name="hint_notes">Бележки</string>
    <string name="hint_street_name">Улица</string>
    <string name="hint_region">Регион</string>
    <string name="hint_farm_name">Име на ферма</string>
    <string name="hint_employee_1">Служител 1</string>
    <string name="hint_employee_2">Служител 2</string>


    <string name="text_gender_sc">Пол:</string>
    <string name="text_maturity_sc">Зрялост:</string>
    <string name="text_status_sc">Статус:</string>
    <string name="text_breed_sc">Порода:</string>
    <string name="text_color_sc">Цвят:</string>
    <string name="text_farm_sc">Ферма:</string>
    <string name="text_herd_sc">Стадо:</string>
    <string name="text_birthplace_sc">Местораждане:</string>
    <string name="text_birth_date_sc">Дата на\nраждане:</string>
    <string name="text_notes_sc">Бележки:</string>
    <string name="text_company_name_sc">Име на фирма:</string>
    <string name="text_name_sc">Име:</string>
    <string name="text_mol_sc">МОЛ:</string>
    <string name="text_eik_sc">ЕИК:</string>
    <string name="text_bulstat_sc">БУЛСТАТ:</string>
    <string name="text_farmer_sc">Фермер:</string>
    <string name="text_breeding_place_number_sc">№ на животновъден обект:</string>
    <string name="text_total_animals_sc">Общ брой животни:</string>
    <string name="text_herdbook_volume_number_sc">№ на родословната книга:</string>
    <string name="text_type_sc">Тип</string>
    <string name="text_register_date_sc">Дата на регистриране:</string>
    <string name="text_user_role_sc">Тип потребител:</string>
    <string name="text_date_of_visit_sc">Дата на посещението:</string>

    <string name="placeholder_name_sc">Име: %1$s</string>
    <string name="placeholder_eik_sc">ЕИК: %1$o</string>
    <string name="placeholder_bulstat_sc">БУЛСТАТ: %1$s</string>
    <string name="placeholder_mol">МОЛ: %1$s</string>
    <string name="placeholder_farmer">Фермер: %1$s %2$s %3$s</string>
    <string name="placeholder_breeding_place_num_sc">Номер ЖО: %1$s</string>
    <string name="placeholder_breeding_place_address">Адрес животновъден обект: \nобл. %1$s, общ. %2$s, %3$s%4$s, %5$s</string>
    <string name="placeholder_date">%1$d %2$s %3$d</string>
    <string name="placeholder_two_names">%1$s %2$s</string>
    <string name="placeholder_three_names">%1$s %2$s %3$s</string>
    <string name="placeholder_years_sc">Години: %1$d</string>


    <!--      ARRAYS     -->
    <string-array name="array_goat_status">
        <item>Избери</item>
    </string-array>

    <string-array name="array_goat_breed">
        <item>Избери</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_farm_add">MainActivityTabbed</string>
    <string name="title_activity_login">Вход</string>

    <string name="error_invalid_password">Твърде кратка парола</string>
    <string name="error_incorrect_password">Грешна парола</string>
    <string name="text_bonitirovka">Бонитировка</string>
    <string name="text_sync_goats">Синхронизирай кози</string>
    <string name="text_applied_for_selection_control_year">Подадено СК 2016</string>
    <string name="text_breed">Порода</string>
    <string name="text_status_2016_sc">Статус 2016: %1$s</string>
    <string name="text_not_synced_protocols">Несинхронизирани протоколи</string>
    <string name="text_import_into_system">Импортирай в системата</string>
    <string name="text_searching">Търсене...</string>
    <string name="text_move_down">Премести долу</string>
    <string name="text_show_goats_lists">Покажи списъци с кози</string>
    <string name="text_number">No.</string>
    <string name="text_applied_for_SC">Подадена\nза СК</string>
    <string name="text_veterinary_number_1">Ветеринарен номер 1</string>
    <string name="text_veterinary_number_2">Ветеринарен номер 2</string>
    <string name="text_breeding_number_1">Развъден номер 1</string>
    <string name="text_breeding_number_2">Развъден номер 2</string>
    <string name="text_old_new">Стара/Нова</string>
    <string name="text_gender">Пол</string>
    <string name="text_SC">СК</string>
    <string name="text_number_in_certificate_sc">No. в Сертификат: %1$s</string>
    <string name="text_certificate_sc">Сертификат: %1$s</string>
    <string name="text_number_in_wastage_protocol_sc">No. в Протокол Брак: %1$s</string>
    <string name="text_wastage_protocol_sc">Протокол Брак: %1$s</string>
    <string name="text_date_deregistered_sc">Дата на отписване: %1$s</string>

    <string name="text_two_values_with_sc_delimiter">%1$s: %2$s</string>
    <string name="text_print">Принтирай</string>
    <string name="crash_toast_text">Опит за изпращане на доклад</string>
    <string name="text_show_goats_from_book">Списък с кози по книга</string>
    <string name="text_previous_record">Предишен запис</string>
    <string name="text_next_record">Следващ запис</string>
    <string name="add_second_farm">Добави втора ферма</string>
    <string name="text_show_goats_from_visit_protocol">Списък с кози от протокол</string>
    <string name="text_last_record">Последен запис</string>
    <string name="text_in_vetis">Води се във ВетИС</string>
    <string name="text_sync_all_farm">Синхронизирай \nвсички ферми</string>


</resources>
