<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.armpk.goatregistrator.activities.VisitProtocolGoatsListsActivity"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/linearMain"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="37"
        android:showDividers="middle"
        android:divider="@drawable/divider_vertical"
        android:background="@android:color/white"
        android:layout_margin="1dip">
        <TextView
            android:id="@+id/textNumber"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_number"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textAppliedForSC"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_applied_for_SC"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textBreedName"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_breed"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textVetNum1"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_veterinary_number_1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textVetNum2"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_veterinary_number_2"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textBreedNum1"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_breeding_number_1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textBreedNum2"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_breeding_number_2"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textNewOld"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_old_new"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textGender"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_gender"
            android:gravity="center"/>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/listMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:layout_below="@+id/linearMain"
        android:layout_above="@+id/linearExtras">
    </ExpandableListView>
    <LinearLayout
        android:id="@+id/linearExtras"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">
        <Button
            android:id="@+id/buttonPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_print"/>
    </LinearLayout>

    <WebView
        android:id="@+id/webForPrint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </WebView>
</RelativeLayout>
