<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.armpk.goatregistrator.activities.GoatAddChoiceActivity">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Button
                android:id="@+id/buttonSynchronizeCities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_synchronize_cities"/>

            <Button
                android:id="@+id/buttonSynchronizeBreeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_synchronize_breeds"/>

            <Button
                android:id="@+id/buttonSynchronizeGoatStatuses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_synchronize_goat_statuses"/>

            <Button
                android:id="@+id/buttonSynchronizeExteriorMarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_synchronize_exterior_marks"/>

            <Button
                android:id="@+id/buttonSynchronizeVisitActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_synchronize_visit_activities"/>

            <Button
                android:id="@+id/buttonAddCityVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_add_city_village"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_sing_out"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
