<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.armpk.goatregistrator.activities.MainMenuActivity">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Button
                android:id="@+id/buttonFarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_farm"/>

            <Button
                android:id="@+id/buttonUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_user"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonGoat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_goat"/>

            <Button
                android:id="@+id/buttonVisitProtocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_visit_protocol"/>

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_settings"/>
        </LinearLayout>



    </ScrollView>


</RelativeLayout>
